# ros-rover4ws-kinematics

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: rviz_visualizer_node.h
launch/: kinematics.launch
robot4ws_kinematics/: CMakeLists.txt  package.xml
robot4ws_kinematics/config/: config.yaml
robot4ws_kinematics/launch/: kinematics.launch
robot4ws_kinematics/src/: rover_kinematic_node.py
src/: rover_kinematic_node.py  rviz_visualizer.py  trp_message_translator.cpp
