<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_kinematics</name>
  <version>1.0.0</version>
  <description>The ROS robot4ws_kinematics package</description>

  <maintainer email="matteo.caruso@phd.units.it">Matteo Caruso</maintainer>


  <license>GPLv3</license>



  <url type="website">http://wiki.ros.org/robot4ws_kinematics</url>


  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robot4ws_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>robot4ws_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
